--- a/intro.tex
+++ b/intro.tex
@@ -161,6 +161,7 @@ And third, we give an in-depth experimental study that demonstrates
 the effectiveness of our approach on a standard benchmark for
 object detection and viewpoint estimation~\cite{Xiang14}. 
 
+\begin{comment}
 \scream{Are we keeping the paragraphs from here...}
 
 outperforming previous results on this dataset by considerable
@@ -226,7 +227,7 @@ alignment result on PASCAL12 and code are publicly available online.
 % Our code has been made publicly online \cite{Choy14} so that our algorithm can be used as a pipeline for 2D-3D registration after general purpose object detectors.
 
 \scream{... to here?}
-
+\end{comment}
 
 
 
