--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -124,32 +124,6 @@ we validate its performance on 3DObject dataset and PASCAL 2012 dataset.
 \input{intro}
 
 \section{Related Works}
-\subsection{Whitened Histograms of Orientations (WHO)}
-% History of Whitening and how whitening works
-Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO)
-\cite{Hariharan12}, which used statistics from natural images to whiten HOG
-templates, making them more discriminative. Whitening is a common signal
-processing operation for decorrelating a set of random variables
-\cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a
-$k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By
-whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we
-remove 2nd order correlation between all features. So, all elements in the
-random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots,
-\tilde{X}_k\right]$, become more independent. In the context of HOG features, a
-whitened HOG template will produce Gaussian noise when convolved with a random
-natural image, but a delta-like response on an image matching the template. WHO
-templates are more discriminative than standard HOG templates because they only
-capture the gradients that differentiate the object from random images.
-\scream{chris added the following} Hariharan \etal. also interpreted the
-whitening as Linear Discriminant Analysis (LDA) where all classes have different
-means but have the same covariance. The whitening and LDA have the same
-formulation when we make a decision boundary $w = \Sigma^{-1}(\mu_+ - \mu_0)$
-where $\mu_+$ is the features from a class (LDA) or a signal to whiten
-(whitening), $\mu_0$ is the negative class center (LDA) or a signal statistics
-(whitening) and $\Sigma$ is the covariance matrix of classes (LDA) or
-correlation within signal (whitening).
-
-\textcolor{red}{Should we mention how our method improves on this (ie by using CG)?}
 
 % Using HOG
 % In this paper, we also used Histograms of Orientations feature \cite{Dalal05} but in general, we could use any dense features. 
@@ -278,8 +252,32 @@ continuously and also searches for different CAD models.
 
 \subsection{Non-Zero Whitened Histograms of Orientations (NZ-WHO)}
 
-We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), that are both more discriminative than WHO, and can be generated in 70ms (compared to several seconds for WHO). This speed up means we can generate templates on the fly, allowing our approach to evaluate arbitrary viewpoint hypotheses. 
-\scream{chris:We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), an improvement over WHO which is both more discriminative than WHO and can be computed many orders of magnitude faster than WHO (70ms as opposed to to several seconds for WHO). This speedup allows us to generate NZ-WHO templates on the fly, allowing us to quickly evaluate arbitrary viewpoint hypotheses.}
+Recently, Hariharan \etal. introduced Whitened Histograms of Orientations (WHO)
+\cite{Hariharan12}, which uses statistics from natural images to whiten HOG
+templates, making them more discriminative. Whitening is a common signal
+processing operation for decorrelating a set of random variables
+\cite{Martinsson05, Belouchrani00}. More formally, suppose that we have a
+$k$-dimensional random variable $X \in \mathcal{R}^k$ with $Cov(X)=\Sigma$. By
+whitening the signal, i.e., $\tilde{X}=\Sigma^{-\frac{1}{2}}(X - E[X])$, we
+remove 2nd order correlation between all features. So, all elements in the
+random variable $\tilde{X} = \left[\tilde{X}_1, \tilde{X}_2, \dots,
+\tilde{X}_k\right]$, become more independent. In the context of HOG features, a
+whitened HOG template will produce Gaussian noise when convolved with a random
+natural image, but a delta-like response on an image matching the template. WHO
+templates are more discriminative than standard HOG templates because they only
+capture the gradients that differentiate the object from random images.
+
+Hariharan \etal. interpreted the
+whitening as Linear Discriminant Analysis (LDA) where all classes have different
+means but have the same covariance. The whitening and LDA have the same
+formulation when we make a decision boundary $w = \Sigma^{-1}(\mu_+ - \mu_0)$
+where $\mu_+$ is the features from a class (LDA) or a signal to whiten
+(whitening), $\mu_0$ is the negative class center (LDA) or the signal mean
+(whitening) and $\Sigma$ is the covariance matrix of classes (LDA) or
+the correlation within signal (whitening).
+
+We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), that are both more discriminative than WHO, and can be generated several orders of magnitude faster (in 70ms compared to several seconds for WHO). This speed up means we can generate templates on the fly, allowing our approach to evaluate arbitrary viewpoint hypotheses. 
+%\scream{chris:We propose Non-Zero Whitened Histograms of Orientations (NZ-WHO), an improvement over WHO which is both more discriminative than WHO and can be computed many orders of magnitude faster than WHO (70ms as opposed to to several seconds for WHO). This speedup allows us to generate NZ-WHO templates on the fly, allowing us to quickly evaluate arbitrary viewpoint hypotheses.}
 
 The computational efficiency of our approach comes from using the iterative conjugate gradient method to whiten the HOG template. Whitening a feature vector $x$ requires a system of linear equations $\Sigma w = (x - \mu)$ to be solved, usually by decomposing the covariance matrix $\Sigma$ (with LU or Cholesky decomposition). Since the covariance matrices of HOG templates have nice spectral properties (see Section \ref{sec:fast_whitening}), the conjugate gradient method will converge to the solution several orders of magnitude faster than decomposition methods.
 
