--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -775,7 +775,7 @@ We run experiments on PASCAL 2007 car category images with at least one car
 (num images) and got x percent improvement after fine tuning.
 
 
-Suppose that $x = \[p, m, f\]$ where $p$ is the 3D rotation of the CAD model and
+Suppose that $x = [p, m, f]$ where $p$ is the 3D rotation of the CAD model and
 $m$ is the CAD model index and $f$ is the focal length. Then we sample $x$ using 
 % there are several advantages that was not possible such as \textbf{on-the-fly} template generation and making large number of templates  
 \begin{figure}[t]
